add URL shortening functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,25 +2,23 @@
 
 <div class="container text-center">
 
-    <h1 class="m-4">URL SHORTENER</h1>
+    
 
     <form action="/shorten" method="POST" >
-            
             <div class="card m-4">
                 <div class="card-body">
                     <label class="form-label"><h3>Paste the URL to be shortened</h3></label>
-                    <input type="text" class="form-control" id="inputURL" placeholder="Paste the URL here">
+                    <input type="text" class="form-control" name="inputURL" placeholder="Paste the URL here">
                 </div>
                 <button type="submit" class="btn btn-primary m-3">SHORTEN URL</button>
             </div>
-
     </form>
 
     <div class="card m-4">
       <div class="card-body">
         <h3 class="card-title">What is an URL shortener?</h3>
         <p class="card-text">
-            An URL shortener allows you to turn long and unreadable links to
+            An URL shortener allows you to turn long and unreadable links into
             short and memorable links. <br>
             Simply enter the long link into the form and press the SHORTEN URL button. <br>
             On the next page you can copy the shortened URL and share it to your hearts content!
