--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,8 @@
    <footer class="footer py-4 border-top fixed-bottom">
         <p class="text-center text-muted">
-            Jarmo T. &#169; 2022
+            Jarmo T. &#169; 2022 | <a class="link-secondary" href="https://github.com/JarmoTro"><i class="fa fa-brands fa-github-square fa-lg"></i></a> | <a class="link-secondary" href="https://www.linkedin.com/in/jarmo-troska-71117b241/"><i class="fa fa-brands fa-linkedin fa-lg"></i></a> 
         </p>
     </footer>
+    <script src="https://kit.fontawesome.com/51dc6e0b3e.js" crossorigin="anonymous"></script>
 </body>
 </html>
