--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,3 +8,7 @@
     <title><%= DocumentTitle %></title>
 </head>
 <body>
+
+    <div class="container text-center">
+        <h1 class="m-4">URL SHORTENER</h1>
+    </div>
