add URL validation

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,6 @@
-<%-include('partials/header', {DocumentTitle:'Home'})%>
+<%-include('partials/header', {DocumentTitle:'URL Shortener'})%>
 
 <div class="container text-center">
-
-    
 
     <form action="/shorten" method="POST" >
             <div class="card m-4">
