--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,5 +10,5 @@
 <body>
 
     <div class="container text-center">
-        <h1 class="m-4">URL SHORTENER</h1>
+        <h1 class="m-4"><a class="text-decoration-none" href="/">URL SHORTENER</a></h1>
     </div>
