--- a/views/shortenedURL.ejs
+++ b/views/shortenedURL.ejs
@@ -20,7 +20,7 @@
             </div>
             <h5 class="mb-4 mt-4"> Original URL: <%= fullURL %> </h5>
           </p>
-          <a href="/"><button type="button" class="btn btn-primary mb-3">CREATE A NEW URL</button></a>
+          <a href="/"><button type="button" class="btn btn-primary mb-3">RETURN TO HOME PAGE</button></a>
         </div>
       </div>
 </div>
