--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,1 +1,20 @@
-<h1>404</h1>
+<%-include('partials/header', {DocumentTitle:'404'})%>
+
+<div class="container text-center">
+            <div class="card m-4">
+                <div class="card-body">
+                    <h1 class="display-1">404</h1>
+                  <h3 class="card-title">Looks like we couldn't find what you were looking for :(</h3>
+                  <p class="card-text">
+                      <h5>Make sure that:</h5>
+                      <ul class="list-inline">
+                        <li>The link is formatted correctly</li>
+                        <li>The link has correct punctuation</li>
+                      </ul>
+                  </p>
+                  <a href="/"><button type="button" class="btn btn-primary">RETURN TO HOME PAGE</button></a>
+                </div>
+              </div>        
+</div>
+
+<%-include('partials/footer')%>
