move js from file to HTML

--- a/views/shortenedURL.ejs
+++ b/views/shortenedURL.ejs
@@ -25,4 +25,15 @@
       </div>
 </div>
 
+<script>
+    function copyToClipboard(){
+    var shortUrl = document.getElementById("shortenedURL");
+
+    shortUrl.select();
+    shortUrl.setSelectionRange(0,9999);
+
+    navigator.clipboard.writeText(shortUrl.value);
+}
+</script>
+
 <%-include('partials/footer')%>
