--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title><%= DocumentTitle %></title>
 </head>
-<body>
+<body style="background-color: #f5f5f5;">
 
     <div class="container text-center">
         <h1 class="m-4"><a class="text-decoration-none" href="/">URL SHORTENER</a></h1>
